k8s-configuration/sc-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-restapi-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
  selector:
    app: sc-restapi
