k8s-configuration/networkPolicies.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-policy
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: database-network-policy
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
  - from:
    - podSelector:
      matchLabels:
        app: sc-backend
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sc-rest-api-policy
spec:
  podSelector:
    matchLabels:
      app: sc-backend
  ingress:
  - from:
    - podSelector:
      matchLabels:
        app: sc-frontend
